codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_one_queued_agent_result_alone.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 1 },
    content: [
        "• 1 child result queued — delivered with your next message  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 58, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
