codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_queued_agent_results_below_queued_messages.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 5 },
    content: [
        "• Queued follow-up inputs                                   ",
        "  ↳ Hello, world!                                           ",
        "    ⌥+↑ edit last queued message                            ",
        "                                                            ",
        "• 2 child results queued — delivered with your next message ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
