codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_wake_mode_hint_alone.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 2 },
    content: [
        "• Subagents are working — each result starts a new turn     ",
        "  automatically; keep chatting meanwhile                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 55, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
